＼進捗どうですか／ animation-function別円型ローディングアニメーションを追加。 ／進捗だめです＼

--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>OreOreSample</title>
+	<title>scss-shiba-sample</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="circle-loader"></div>
+	<header>
+		scss-shibata-sample
+		<a href="https://twitter.com/tomoya_shibata">@tomoya_shibata</a>
+	</header>
+	<section id="circle-loader">
+		<div class="elements-list">
+			<h1>circle-loader</h1>
+			<h4>linaer</h4>
+			<div class="circle-loader-linear"></div>
+			<h4>ease</h4>
+			<div class="circle-loader-ease"></div>
+			<h4>ease-in</h4>
+			<div class="circle-loader-ease-in"></div>
+			<h4>ease-out</h4>
+			<div class="circle-loader-ease-out"></div>
+			<h4>ease-in-out</h4>
+			<div class="circle-loader-ease-in-out"></div>
+		</div>
+	</seciton>
 </body>
 </html>
