にゃんぱすー。
直線のローディングアニメーション追加しました。

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>scss-shiba-sample</title>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header>
@@ -24,6 +26,22 @@
 			<h4>ease-in-out</h4>
 			<div class="circle-loader-ease-in-out"></div>
 		</div>
-	</seciton>
+	</section>
+	<section id="linear-loader">
+	<div id="linear-loader">
+		<div class="elements-list">
+			<h1>linear-loader</h1>
+			<h4>linear</h4>
+			<div class="linear-loader-linear"></div>
+			<h4>ease</h4>
+			<div class="linear-loader-ease"></div>
+			<h4>ease-in</h4>
+			<div class="linear-loader-ease-in"></div>
+			<h4>ease-out</h4>
+			<div class="linear-loader-ease-out"></div>
+			<h4>ease-in-out</h4>
+			<div class="linear-loader-ease-in-out"></div>
+		</div>
+	</section>
 </body>
 </html>
