Added "Windows loder". (bad code)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 		</div>
 	</section>
 	<section id="linear-loader">
-	<div id="linear-loader">
 		<div class="elements-list">
 			<h1>linear-loader</h1>
 			<h4>linear</h4>
@@ -41,6 +40,23 @@
 			<div class="linear-loader-ease-out"></div>
 			<h4>ease-in-out</h4>
 			<div class="linear-loader-ease-in-out"></div>
+		</div>
+	</section>
+	<section id="windows-loder" style="height: 230px;">
+		<div class="elements-list">
+			<h1>windows-loader</h1>
+			<div class="windows-loader1"></div>
+			<div class="windows-loader2"></div>
+			<div class="windows-loader3"></div>
+			<div class="windows-loader4"></div>
+			<div class="windows-loader5"></div>
+		</div>
+	</section>
+	<section class="icons">
+		<div class="elements-list">
+			<h1>icon</h1>
+			<h4>cross</h4>
+			<div class="icon-cross"></div>
 		</div>
 	</section>
 </body>
